# seamarine-lightnovel-translator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  seamarine_lightnovel_translator.py
legacy/: new_gui.py  sea_marine_epub_translator.py
legacy/old/: epub_processor.py.old  gui.py.old  main.py
legacy/test/: gemini_test.py  gemini_test.sh  server.py
refactor/src/seamarine_epub_translate/file_core/: __init__.py  base.py  epub.py  errors.py  txt.py
refactor/src/seamarine_epub_translate/translate_core/: __init__.py  api_info.py  base.py  core.py  gemini.py  vertex.py
seamarine2/src/: app.py  logger_config.py
seamarine2/src/backend/: main.py
seamarine2/src/backend/controller/: app_controller.py
seamarine2/src/backend/core/: __init__.py  translate_core.py
seamarine2/src/backend/model/: __init__.py  ai_model_config.py  config_data.py  line_data.py  pn_dict_list_model.py  (+2 more)
seamarine2/src/utils/: __init__.py  chunker.py  config.py  epub.py  foreign_detect.py  paths.py  pn_dict.py  translatable_xhtml.py
seamarine2/src/view/: logWindow.qml  main.qml  tableWindow.qml
src/: chunker.py  clear  dual_language.py  epub_processor.py  extractor.py  new_epub_processor.py  new_gui.py  oldepub_processor.py.old  proper_nouns.csv  ruby_remover.py  sea_marine_epub_translator.py  seamarine_epub_translator.py  settings.json  settings.py  translator_core.py  utils.py
src/gui/: customs.py  dialogs.py  main_window.py  new_workers.py  workers.py
src/modern_gui_test/: gui.py
src/old/: oldgui.py.old  translator_core.py.old
src/test/: tkinter_test.py
(+70 files in other folders)
