[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "seamarine2"
version = "2.1.1"
description = "SeaMarine Light Novel Translator (GUI + backend cores)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "SeaMarine Team" },
]
keywords = ["translation", "epub", "gemini", "openai", "qml", "pyside6"]
dependencies = [
  "google-genai>=1.33.0",
  "PySide6>=6.9.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "Pillow>=10.0.0",
  "EbookLib>=0.19",
  "pycountry>=24.6.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
openai = [
  "openai>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "seamarine2/src"}
py-modules = ["app", "logger_config"]

[tool.setuptools.packages.find]
where = ["seamarine2/src"]
include = [
  "backend*",
  "utils*",
]
